--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "buscadorimagenes",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://alexpizarro3.github.io/imagesearch",
+  "homepage": "https://buscarimagenreact.xyz/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
@@ -18,7 +18,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
+    "predeploy": "npm run build && echo buscarimagenreact.xyz > ./build/CNAME ",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
